# Object-Detection-MicroService-CPP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  docker-compose.yml  dockerfile  env.sh  main.cpp
.github/workflows/: docker-image.yml
examples/: CMakeLists.txt  trivial_client.cpp
inc/: background_service.hpp  callback_factory.hpp  data_publisher.hpp  defaults.hpp  detection_model.hpp  detection_service.hpp  inference.h  message_bus_client.hpp  missing_environment_variable.hpp  processing_service.hpp  rabbitmq_client.hpp  utils.hpp  workload_balancer.hpp  yolo_v8.hpp
inc/ai/: yolo.hpp  yolo_v5.hpp  yolo_v8.hpp
inc/publisher/: basic_publisher.hpp  data_publisher.hpp  img_publisher.hpp
inc/rabbitmq/: action_storage.hpp  message_bus_client.hpp  rabbitmq_client.hpp
inc/service/: detection_service.hpp  processing_service.hpp
src/: detection_service.cpp  inference.cpp  message_bus_client.cpp  yolo_v5.cpp  yolo_v8.cpp
src/ai/: yolo.cpp  yolo_v5.cpp  yolo_v8.cpp
src/publishers/: basic_publisher.cpp  data_publisher.cpp  img_publisher.cpp
src/rabbitmq/: message_bus_client.cpp  rabbitmq_client.cpp
src/services/: detection_service.cpp  processing_service.cpp
